--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,8 @@ tomcat8 (8.0.0~RC1-1) UNRELEASED; urgency=low
   * The spec jars under the org.apache.tomcat groupId are now deployed with
     the upstream version instead of the specification version to match the
     artifacts available on Maven central.
+  * Renamed the jars in /usr/share/java to tomcat8-xxx to avoid conflicts
+    with other versions of Tomcat
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 12 Sep 2013 16:10:10 +0200
 
