Added the missing descriptions to the patches

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ tomcat8 (8.0.0~RC1-1) UNRELEASED; urgency=low
     with other versions of Tomcat
   * Removed libservlet3.1-java.links defining the tomcat-* links
     in /usr/share/java with the specifications versions
+  * Added the missing descriptions to the patches
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 12 Sep 2013 16:10:10 +0200
 
