Added a Lintian override for the incompatible-java-bytecode-format warning since Tomcat requires Java 7

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ tomcat8 (8.0.0~RC1-1) UNRELEASED; urgency=low
   * Removed libservlet3.1-java.links defining the tomcat-* links
     in /usr/share/java with the specifications versions
   * Added the missing descriptions to the patches
+  * Added a Lintian override for the incompatible-java-bytecode-format warning
+    since Tomcat requires Java 7
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 12 Sep 2013 16:10:10 +0200
 
