--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ tomcat8 (8.0.0~RC1-1) UNRELEASED; urgency=low
     - Refreshed the patches
     - Updated debian/copyright
     - Installed the new jars (spdy, jni, websocket, websocket-api, storeconfig)
+    - Updated the artifactId of the specification jars to include
+      the new javax prefix
   * Marked libtomcat8-java as conflicting with libtomcat7-java
   * Use XZ compression for the upstream tarball
   * Replaced Sun Microsystems with Oracle
