Fixed the versions of the Maven dependencies for jsp-api

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,7 @@ tomcat8 (8.0.0~RC1-1) UNRELEASED; urgency=low
   * Added a patch to ignore the failing tests
   * Moved the tomcat-{servlet|jsp|el}-api artifacts from libservlet3.1-java
     to libtomcat8-java
+  * Fixed the versions of the Maven dependencies for jsp-api
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 12 Sep 2013 16:10:10 +0200
 
