--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ tomcat8 (8.0.0~RC1-1) UNRELEASED; urgency=low
     - Installed the new jars (spdy, jni, websocket, websocket-api, storeconfig)
     - Updated the artifactId of the specification jars to include
       the new javax prefix
+    - Added the javax.websocket-api artifact to libservlet3.1-java
   * Marked libtomcat8-java as conflicting with libtomcat7-java
   * Use XZ compression for the upstream tarball
   * Replaced Sun Microsystems with Oracle
