Use a Lintian override to clear the codeless-jar warnings on the tomcat-i18n jars instead of a patch turning them into zip files

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,8 @@ tomcat8 (8.0.0~RC1-1) UNRELEASED; urgency=low
     deploys only the jars in /usr/share/java and the Maven artifacts in
     /usr/share/maven-repo.
   * Added the EL and WebSocket APIs to libservlet3.1-java-doc
+  * Use a Lintian override to clear the codeless-jar warnings on the tomcat-i18n
+    jars instead of a patch turning them into zip files.
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 12 Sep 2013 16:10:10 +0200
 
