--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ tomcat8 (8.0.0~RC5-1) UNRELEASED; urgency=low
     - Updated the artifactId of the specification jars to include
       the new javax prefix
     - Added the javax.websocket-api artifact to libservlet3.1-java
+    - New build dependency on cglib, easymock and objenesis
   * Use XZ compression for the upstream tarball
   * debian/control:
     - Replaced Sun Microsystems with Oracle in the packages descriptions
