--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-tomcat8 (8.0.0~RC10-1) UNRELEASED; urgency=low
+tomcat8 (8.0.3-1) UNRELEASED; urgency=low
 
   * Team upload.
   * New upstream release (Closes: #722675)
