--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ tomcat8 (8.0.4-1) UNRELEASED; urgency=medium
 
   * New upstream release
     - Refreshed the patches
+    - Disabled Java 8 support in JSPs (requires an Eclipse compiler update)
 
  -- Emmanuel Bourg <ebourg@apache.org>  Wed, 19 Mar 2014 22:39:42 +0100
 
