Upload to unstable

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-tomcat8 (8.0.4-1) UNRELEASED; urgency=medium
+tomcat8 (8.0.5-1) unstable; urgency=medium
 
   * New upstream release
     - Refreshed the patches
     - Disabled Java 8 support in JSPs (requires an Eclipse compiler update)
   * Fixed the name of the doc-base file for libservlet3.1-java (Closes: #746338)
 
- -- Emmanuel Bourg <ebourg@apache.org>  Wed, 19 Mar 2014 22:39:42 +0100
+ -- Emmanuel Bourg <ebourg@apache.org>  Tue, 29 Apr 2014 10:22:45 +0200
 
 tomcat8 (8.0.3-1) unstable; urgency=medium
 
